--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,6 +26,9 @@ target 'AwesomeProject' do
   rn_maps_path = '../node_modules/react-native-maps'
   pod 'react-native-google-maps', :path => rn_maps_path
 
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
+  
   config = use_native_modules!
 
 
