--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "react": "18.2.0",
     "react-native": "0.71.5",
     "react-native-fbsdk-next": "^11.2.0",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-maps": "^1.4.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-permissions": "^3.8.0",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0"
+    "react-native-screens": "^3.20.0",
+    "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
