--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pod": "cd ios && pod install && cd .."
   },
   "dependencies": {
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
